@@ -542,4 +542,6 @@ extern int util_parse_commands_argvc(char *texto, char *parm_argv[], int maximo)
 
 extern int get_machine_id_by_name(char *machine_name);
 
+extern int util_write_pbm_file(char *archivo, int ancho, int alto, z80_byte *source);
+
 #endif
